--- a/Source/MonoGame.QuakeConsole.WindowsDX.csproj
+++ b/Source/MonoGame.QuakeConsole.WindowsDX.csproj
@@ -31,7 +31,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\WindowsDX\</OutputPath>
-    <DocumentationFile>bin\Release\WindowsDX\QuakeConsole.MonoGame.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\WindowsDX\MonoGame.QuakeConsole.xml</DocumentationFile>
     <DefineConstants>TRACE;WINDOWSDX</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
