--- a/Source/MonoGame.QuakeConsole.DesktopGL.csproj
+++ b/Source/MonoGame.QuakeConsole.DesktopGL.csproj
@@ -1,26 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{98F182D3-4B53-4F26-A72C-588471AFDC49}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QuakeConsole</RootNamespace>
-    <AssemblyName>MonoGame.QuakeConsole</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile />
-    <FileAlignment>512</FileAlignment>
-    <MonoGamePlatform>DesktopGL</MonoGamePlatform>
-    <MonoGameContentBuilderExe>
-    </MonoGameContentBuilderExe>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\Debug\DesktopGL\</OutputPath>
     <DefineConstants>TRACE;DEBUG;LINUX;DESKTOPGL</DefineConstants>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DocumentationFile>bin\Debug\DesktopGL\MonoGame.QuakeConsole.xml</DocumentationFile>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -29,62 +17,24 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <OutputPath>bin\Release\DesktopGL\</OutputPath>
     <DefineConstants>TRACE;LINUX;DESKTOPGL</DefineConstants>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DocumentationFile>bin\Release\DesktopGL\MonoGame.QuakeConsole.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
+
+  <!-- 
   <ItemGroup>
-    <Compile Include="Console.cs" />
-    <Compile Include="ConsoleComponent.cs" />
-    <Compile Include="ICommandInterpreter.cs" />
-    <Compile Include="Input\Caret.cs" />
-    <Compile Include="Input\ConsoleActionMap.cs" />
-    <Compile Include="Input\ConsoleInput.cs" />
-    <Compile Include="Input\ConsoleInput.Definitions.cs" />
-    <Compile Include="Input\Features\Autocompletion.cs" />
-    <Compile Include="Input\Features\CaseSensitivity.cs" />
-    <Compile Include="Input\Features\CommandExecution.cs" />
-    <Compile Include="Input\Features\CopyPasting.cs" />
-    <Compile Include="Input\Features\Deletion.cs" />
-    <Compile Include="Input\Features\InputHistory.cs" />
-    <Compile Include="Input\Features\Movement.cs" />
-    <Compile Include="Input\Features\RepeatingInput.cs" />
-    <Compile Include="Input\Features\Selection.cs" />
-    <Compile Include="Input\Features\Tabbing.cs" />
-    <Compile Include="Input\IConsoleInput.cs" />
-    <Compile Include="Input\Symbol.cs" />
-    <Compile Include="Output\ConsoleOutput.cs" />
-    <Compile Include="Output\IConsoleOutput.cs" />
-    <Compile Include="Output\OutputEntry.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+   
     <Compile Include="Resource.DesktopGL.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource.DesktopGL.resx</DependentUpon>
     </Compile>
-    <Compile Include="TexturedBackground.cs" />
-    <Compile Include="Utilities\BiDirectionalDictionary.cs" />
-    <Compile Include="Utilities\Check.cs" />
-    <Compile Include="Utilities\CircularArray.cs" />
-    <Compile Include="Utilities\InputState.cs" />
-    <Compile Include="Utilities\Int3.cs" />
-    <Compile Include="Utilities\Native.cs" />
-    <Compile Include="Utilities\Pool.cs" />
-    <Compile Include="Utilities\RectangleF.cs" />
-    <Compile Include="Utilities\SpriteFontStringBuilder.cs" />
-    <Compile Include="Utilities\StringExtensions.cs" />
-    <Compile Include="Utilities\Timer.cs" />
+   
   </ItemGroup>
-  <ItemGroup>
-    <Reference Include="MonoGame.Framework, Version=3.6.0.1625, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\MonoGame.Framework.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-  </ItemGroup>
-  <ItemGroup />
+  -->
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.DesktopGL.mgcb" />
     <None Include="Content\bin\DesktopGL\qc_background.xnb" />
@@ -92,19 +42,15 @@
     <None Include="Content\qc_background.fx" />
     <None Include="Content\qc_console.spritefont" />
   </ItemGroup>
-  <ItemGroup>
+  <!-- <ItemGroup>
     <EmbeddedResource Include="Resource.DesktopGL.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.DesktopGL.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup> -->
+  <ItemGroup>
+    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  
 </Project>
