--- a/Source/MonoGame.QuakeConsole.WindowsDX.csproj
+++ b/Source/MonoGame.QuakeConsole.WindowsDX.csproj
@@ -1,120 +1,43 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{66A03276-E5E7-4E05-9790-F5602147426C}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QuakeConsole</RootNamespace>
-    <AssemblyName>MonoGame.QuakeConsole</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile />
-    <FileAlignment>512</FileAlignment>
-    <MonoGamePlatform>Windows</MonoGamePlatform>
-    <MonoGameContentBuilderExe>
-    </MonoGameContentBuilderExe>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+
+<PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Debug\Windows\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;LINUX;WINDOWSDX</DefineConstants>
+    <DocumentationFile>bin\Debug\Windows\MonoGame.QuakeConsole.xml</DocumentationFile>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\WindowsDX\</OutputPath>
-    <DocumentationFile>bin\Debug\WindowsDX\MonoGame.QuakeConsole.xml</DocumentationFile>
-    <DefineConstants>TRACE;DEBUG;WINDOWSDX</DefineConstants>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <OutputPath>bin\Release\Windows\</OutputPath>
+    <DefineConstants>TRACE;LINUX;WINDOWSDX</DefineConstants>
+    <DocumentationFile>bin\Release\Windows\MonoGame.QuakeConsole.xml</DocumentationFile>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\WindowsDX\</OutputPath>
-    <DocumentationFile>bin\Release\WindowsDX\MonoGame.QuakeConsole.xml</DocumentationFile>
-    <DefineConstants>TRACE;WINDOWSDX</DefineConstants>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+
+  
   <ItemGroup>
-    <Reference Include="MonoGame.Framework, Version=3.6.0.1625, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
+    <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.0.1641" />
+    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="Input\Features\CommandExecution.cs" />
-    <Compile Include="Input\Features\CaseSensitivity.cs" />
-    <Compile Include="Input\Features\Deletion.cs" />
-    <Compile Include="Input\Features\Selection.cs" />
-    <Compile Include="Input\Features\Tabbing.cs" />
-    <Compile Include="Input\Features\Movement.cs" />
-    <Compile Include="Input\Features\CopyPasting.cs" />
-    <Compile Include="Resource.WindowsDX.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resource.WindowsDX.resx</DependentUpon>
-    </Compile>
-    <Compile Include="TexturedBackground.cs" />
-    <Compile Include="Input\Caret.cs" />
-    <Compile Include="ConsoleComponent.cs" />
-    <Compile Include="Console.cs" />
-    <Compile Include="Input\ConsoleInput.Definitions.cs" />
-    <Compile Include="Input\Features\Autocompletion.cs" />
-    <Compile Include="Input\Features\InputHistory.cs" />
-    <Compile Include="Input\Features\RepeatingInput.cs" />
-    <Compile Include="ICommandInterpreter.cs" />
-    <Compile Include="Input\IConsoleInput.cs" />
-    <Compile Include="Input\ConsoleInput.cs" />
-    <Compile Include="Output\IConsoleOutput.cs" />
-    <Compile Include="Output\ConsoleOutput.cs" />
-    <Compile Include="Output\OutputEntry.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Input\Symbol.cs" />
-    <Compile Include="Utilities\BiDirectionalDictionary.cs" />
-    <Compile Include="Input\ConsoleActionMap.cs" />
-    <Compile Include="Utilities\Native.cs" />
-    <Compile Include="Utilities\Int3.cs" />
-    <Compile Include="Utilities\SpriteFontStringBuilder.cs" />
-    <Compile Include="Utilities\Check.cs" />
-    <Compile Include="Utilities\CircularArray.cs" />
-    <Compile Include="Utilities\InputState.cs" />
-    <Compile Include="Utilities\Pool.cs" />
-    <Compile Include="Utilities\RectangleF.cs" />
-    <Compile Include="Utilities\StringExtensions.cs" />
-    <Compile Include="Utilities\Timer.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <MonoGameContentReference Include="Content\Content.WindowsDX.mgcb" />
-    <None Include="Content\bin\Windows\qc_background.xnb" />
-    <None Include="Content\bin\Windows\qc_console.xnb" />
-    <None Include="Content\qc_console.spritefont" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resource.WindowsDX.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resource.WindowsDX.Designer.cs</LastGenOutput>
+    <EmbeddedResource Update="Resource.WindowsDX.resx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
+
   <ItemGroup>
-    <Content Include="Content\qc_background.fx" />
+    <MonoGameContentReference Include="Content\Content.WindowsDX.mgcb" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
-  <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
-  </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  
 </Project>
