--- a/Interpreters/ManualInterpreter/MonoGame.QuakeConsole.ManualInterpreter.csproj
+++ b/Interpreters/ManualInterpreter/MonoGame.QuakeConsole.ManualInterpreter.csproj
@@ -3,6 +3,14 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PackageId>MonoGame.QuakeConsole.ManualInterpreter.WindowsDX</PackageId>
+    <Title>Manual Interpreter for MonoGame Quake-style Console</Title>
+    <Version>2.0.0</Version>
+    <Authors>Jaanus Varus</Authors>
+    <Description>Interpreter for executing manually defined commands.</Description>
+    <PackageTags>monogame console interpreter manual</PackageTags>
+    <RepositoryUrl>https://github.com/discosultan/quake-console</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
