--- a/Interpreters/PythonInterpreter/MonoGame.QuakeConsole.PythonInterpreter.WindowsDX.csproj
+++ b/Interpreters/PythonInterpreter/MonoGame.QuakeConsole.PythonInterpreter.WindowsDX.csproj
@@ -3,6 +3,14 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PackageId>MonoGame.QuakeConsole.PythonInterpreter.WindowsDX</PackageId>
+    <Title>Python Interpreter for MonoGame Quake-style Console</Title>
+    <Version>2.0.0</Version>
+    <Authors>Jaanus Varus</Authors>
+    <Description>Interpreter for executing console commands using a Python engine.</Description>
+    <PackageTags>monogame console interpreter ironpython python</PackageTags>
+    <RepositoryUrl>https://github.com/discosultan/quake-console</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
