--- a/Interpreters/RoslynInterpreter/MonoGame.QuakeConsole.RoslynInterpreter.csproj
+++ b/Interpreters/RoslynInterpreter/MonoGame.QuakeConsole.RoslynInterpreter.csproj
@@ -3,6 +3,14 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PackageId>MonoGame.QuakeConsole.RoslynInterpreter.WindowsDX</PackageId>
+    <Title>C# Interpreter for MonoGame Quake-style Console</Title>
+    <Version>2.0.0</Version>
+    <Authors>Jaanus Varus</Authors>
+    <Description>Interpreter for executing console commands using a Roslyn scripting API.</Description>
+    <PackageTags>monogame console interpreter roslyn csharp</PackageTags>
+    <RepositoryUrl>https://github.com/discosultan/quake-console</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
