--- a/Source/MonoGame.QuakeConsole.WindowsDX.csproj
+++ b/Source/MonoGame.QuakeConsole.WindowsDX.csproj
@@ -4,6 +4,14 @@
     <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <DefineConstants>WINDOWSDX</DefineConstants>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PackageId>MonoGame.QuakeConsole.WindowsDX</PackageId>
+    <Title>Quake-style Console for MonoGame</Title>
+    <Version>2.0.0</Version>
+    <Authors>Jaanus Varus</Authors>
+    <Description>Quake-style console allowing for in-game user input.</Description>
+    <PackageTags>monogame console shell terminal</PackageTags>
+    <RepositoryUrl>https://github.com/discosultan/quake-console</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
